crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__fstring_newline_format_spec.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: "lex_invalid(source, Mode::Module)"
---
## Tokens
```
[
    NonLogicalNewline 0..1,
    FStringStart 1..3 (flags = F_STRING),
    FStringMiddle 3..5 (flags = F_STRING),
    Lbrace 5..6,
    NonLogicalNewline 6..7,
    Identifier 11..12,
    Colon 12..13,
    FStringMiddle 13..14 (flags = F_STRING),
    Newline 14..15,
    Rbrace 15..16,
    Identifier 16..18,
    String 18..19 (flags = UNCLOSED_STRING),
    Newline 19..20,
    FStringStart 20..22 (flags = F_STRING),
    FStringMiddle 22..24 (flags = F_STRING),
    Lbrace 24..25,
    NonLogicalNewline 25..26,
    Identifier 30..31,
    Colon 31..32,
    FStringMiddle 32..33 (flags = F_STRING),
    Newline 33..34,
    Indent 34..42,
    Identifier 42..43,
    Newline 43..44,
    Dedent 44..44,
    Rbrace 44..45,
    Identifier 45..47,
    String 47..48 (flags = UNCLOSED_STRING),
    Newline 48..49,
]
```
## Errors
```
[
    LexicalError {
        error: FStringError(
            NewlineInFormatSpec,
        ),
        location: 13..14,
    },
    LexicalError {
        error: UnclosedStringError,
        location: 18..19,
    },
    LexicalError {
        error: FStringError(
            NewlineInFormatSpec,
        ),
        location: 32..33,
    },
    LexicalError {
        error: UnclosedStringError,
        location: 47..48,
    },
]
```
