crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__fstring_prefix.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    FStringStart 0..2 (flags = DOUBLE_QUOTES | F_STRING),
    FStringEnd 2..3 (flags = DOUBLE_QUOTES | F_STRING),
    FStringStart 4..6 (flags = DOUBLE_QUOTES | F_STRING),
    FStringEnd 6..7 (flags = DOUBLE_QUOTES | F_STRING),
    FStringStart 8..11 (flags = DOUBLE_QUOTES | F_STRING | RAW_STRING_LOWERCASE),
    FStringEnd 11..12 (flags = DOUBLE_QUOTES | F_STRING | RAW_STRING_LOWERCASE),
    FStringStart 13..16 (flags = DOUBLE_QUOTES | F_STRING | RAW_STRING_LOWERCASE),
    FStringEnd 16..17 (flags = DOUBLE_QUOTES | F_STRING | RAW_STRING_LOWERCASE),
    FStringStart 18..21 (flags = DOUBLE_QUOTES | F_STRING | RAW_STRING_UPPERCASE),
    FStringEnd 21..22 (flags = DOUBLE_QUOTES | F_STRING | RAW_STRING_UPPERCASE),
    FStringStart 23..26 (flags = DOUBLE_QUOTES | F_STRING | RAW_STRING_UPPERCASE),
    FStringEnd 26..27 (flags = DOUBLE_QUOTES | F_STRING | RAW_STRING_UPPERCASE),
    FStringStart 28..31 (flags = DOUBLE_QUOTES | F_STRING | RAW_STRING_LOWERCASE),
    FStringEnd 31..32 (flags = DOUBLE_QUOTES | F_STRING | RAW_STRING_LOWERCASE),
    FStringStart 33..36 (flags = DOUBLE_QUOTES | F_STRING | RAW_STRING_LOWERCASE),
    FStringEnd 36..37 (flags = DOUBLE_QUOTES | F_STRING | RAW_STRING_LOWERCASE),
    FStringStart 38..41 (flags = DOUBLE_QUOTES | F_STRING | RAW_STRING_UPPERCASE),
    FStringEnd 41..42 (flags = DOUBLE_QUOTES | F_STRING | RAW_STRING_UPPERCASE),
    FStringStart 43..46 (flags = DOUBLE_QUOTES | F_STRING | RAW_STRING_UPPERCASE),
    FStringEnd 46..47 (flags = DOUBLE_QUOTES | F_STRING | RAW_STRING_UPPERCASE),
    Newline 47..47,
]
```
