crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__fstring_single_quote_escape_windows_eol.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: fstring_single_quote_escape_eol(WINDOWS_EOL)
---
## Tokens
```
[
    (
        FStringStart,
        0..2,
        TokenFlags(
            F_STRING,
        ),
    ),
    (
        FStringMiddle,
        2..20,
        TokenFlags(
            F_STRING,
        ),
    ),
    (
        FStringEnd,
        20..21,
        TokenFlags(
            F_STRING,
        ),
    ),
    (
        Newline,
        21..21,
    ),
]
```
