crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__fstring_with_ipy_escape_command.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    FStringStart 0..2 (flags = DOUBLE_QUOTES | F_STRING),
    FStringMiddle 2..6 (flags = DOUBLE_QUOTES | F_STRING),
    Lbrace 6..7,
    Exclamation 7..8,
    Identifier 8..11,
    Rbrace 11..12,
    FStringMiddle 12..16 (flags = DOUBLE_QUOTES | F_STRING),
    FStringEnd 16..17 (flags = DOUBLE_QUOTES | F_STRING),
    Newline 17..17,
]
```
